[package]
name = "rush"
version = "0.1.0"
authors = ["ashpil <ashpil@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mustang = "0.8.4"
os_pipe = "0.9.2"
nix = "0.18.0"
std = { version = "0.16.2", package = "eyra" }

[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true
